# test-ocr

./: .gitignore  DEV.md  README.md  pyproject.toml
.idx/: dev.nix
src/: index.html  main.py  utils.py
src/google/: service.py
src/scanner/: controller.py  service.py
